Fabric 1.17
Co-authored-by: shartte <shartte@users.noreply.github.com>